--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,10 +1,26 @@
 <!--index.wxml-->
+<view class="title">
+  <text>开关</text>
+</view>
+<view class='line'></view>
 <view class="container">
-  <button type="primary" bindtap="light1on">灯1开</button>
-  <view style="height: 10px;"></view>
-  <button type="primary" bindtap="light1off">灯1关</button>
-  <view style="height: 10px;"></view>
-  <button type="default" bindtap="light2on">灯2开</button>
-  <view style="height: 10px;"></view>
-  <button type="default" bindtap="light2off">灯2关</button>
+  <switch id='power' color='#33a3dc' bindchange='BLE_Switch'>ON/OFF</switch>
+</view>
+<view class='blank'></view>
+<view class="title">
+  <text>夜灯模式</text>
+</view>
+<view class='line'></view>
+<view class="container">
+  <checkbox-group>
+    <radio-group class='mode' bindchange='BLE_Mode' >
+      <radio color='#33a3dc' checked="true" value="lit">
+        <text decode="true">&nbsp;照明</text>
+      </radio>
+      <text decode="true">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</text>
+      <radio color='#33a3dc' value="atm">
+        <text decode="true">&nbsp;氛围</text>
+      </radio>
+    </radio-group>
+  </checkbox-group>
 </view>
